# induction-heater-software

./: .gitignore  CMakeLists.txt  README.md  deploy-installer.bat  horno.pro  tprof.pro
assets/: README.md  resources.qrc
deploy/config/: config.xml
fuzzy/: fuzzy2x1.json  fuzzy2x3.json  fuzzy3x1.json
libs/: README.md  apple_endian.h  chrono.cpp  chrono.h  exception.cpp  exception.h  stream.h
libs/logger/: logger.cpp  logger.h  logger_worker.cpp  logger_worker.h
libs/logger/message/: logger_critical.cpp  logger_critical.h  logger_debug.cpp  logger_debug.h  logger_info.cpp  logger_info.h  logger_message.cpp  logger_message.h  logger_quit.cpp  logger_quit.h  logger_warning.cpp  logger_warning.h  message.cpp  message.h
libs/portable-endian/: CMakeLists.txt  endianness_config.cpp  endianness_config.h.in
old/: MAX31856.py  README.md  app.py  functions.py  gui.py
simulations/: 2x1.fis  2x1_pid.fis  3x1.fis  GraficarSalidasTests.m  app_graph.m  current.m  current_measurement.m  heating_process.m  test.m  test_system.slx
src/: main.cpp  mainwindow.ui  messages.h
src/configuration/: app_config.cpp  app_config.h  general_config.h
src/connection/: communicator.cpp  communicator.h  communicator_worker.cpp  communicator_worker.h  receiver.cpp  receiver.h  sender.cpp  sender.h  serialport.cpp  serialport.h
src/connection/protocol/: automatic_control_acknowledge.cpp  automatic_control_acknowledge.h  cold_junction_reading.cpp  cold_junction_reading.h  current_RMS_reading.cpp  current_RMS_reading.h  current_frequency_reading.cpp  current_frequency_reading.h  incoming_message.cpp  incoming_message.h  manual_control_acknowledge.cpp  manual_control_acknowledge.h  micro_message.cpp  micro_message.h  outgoing_message.cpp  outgoing_message.h  ping_message.cpp  ping_message.h  pong_message.cpp  pong_message.h  power_set_acknowledge.cpp  power_set_acknowledge.h  protocol.cpp  protocol.h  set_automatic_control.cpp  set_automatic_control.h  set_manual_control.cpp  set_manual_control.h  set_power.cpp  set_power.h  shutdown_ack.cpp  shutdown_ack.h  shutdown_message.cpp  shutdown_message.h  temperature_reading.cpp  temperature_reading.h  thermocouple_configuration.cpp  thermocouple_configuration.h  thermocouple_configuration_acknowledge.cpp  thermocouple_configuration_acknowledge.h  (+2 more)
src/control/: MemberCandidate.cpp  MemberCandidate.h  MemberFunction.cpp  MemberFunction.h  OutputObject.cpp  OutputObject.h  algorithm.cpp  algorithm.h  classic_pid.cpp  classic_pid.h  control_algorithm.cpp  control_algorithm.h  controller.cpp  controller.h  file_control.cpp  file_control.h  fuzzy2x1.cpp  fuzzy2x1.h  fuzzy2x3.cpp  fuzzy2x3.h  fuzzy3x1.cpp  fuzzy3x1.h  fuzzy_logic.cpp  fuzzy_logic.h  fuzzy_rules.txt  zieglers_nichols.cpp  zieglers_nichols.h
src/controller/: controller.h
src/model/: errorTableColums.h
src/view/: application.cpp  application.h  auto_tunning_tab_view.cpp  auto_tunning_tab_view.h  auto_tunning_tab_view.ui  automatic_control_tab_view.cpp  automatic_control_tab_view.h  automatic_control_tab_view.ui  chart.cpp  chart.h  chart_tab_view.cpp  chart_tab_view.h  chart_tab_view.ui  chart_widget.cpp  chart_widget.h  classic_control_view.cpp  classic_control_view.h  classic_control_view.ui  equipment_status_view.cpp  equipment_status_view.h  equipment_status_view.ui  fuzzy_control_view.cpp  fuzzy_control_view.h  general_view.cpp  general_view.h  general_view.ui  mainwindow.cpp  mainwindow.ui  manual_power_control_view.cpp  manual_power_control_view.h  manual_power_control_view.ui  message_modes.h
src/view/chart/: chart.cpp  chart.h  chart_conf.cpp  chart_conf.h  chart_config_dialog.cpp  chart_config_dialog.h  chart_config_dialog.ui  chart_file_writer.cpp  chart_file_writer.h  chart_limits.h  chart_view.cpp  chart_view.h  chart_widget.cpp  chart_widget.h  chart_widget.ui
src/view/chart_configuration/: chart_conf.cpp  chart_conf.h
src/view/control_configuration/: classic_control_view.cpp  classic_control_view.h  classic_control_view.ui  control_configuration.cpp  control_configuration.h  from_file_control_view.cpp  from_file_control_view.h  from_file_control_view.ui  fuzzy_control_view.cpp  fuzzy_control_view.h  fuzzy_control_view.ui
src/view/dialog/: config.h  general_config_dialog.cpp  general_config_dialog.h  general_config_dialog.ui
test/: test_main.cpp
test/dut/: csv_writter.cpp  csv_writter.h  dut_emulator.cpp  dut_emulator.h  test_ziegler_nichols.cpp  test_ziegler_nichols.h
tests/: CMakeLists.txt  TestCommunicator.h  TestMain.cpp
